# vcc-totem

./: .gitignore  README.md  api_wrapper.py  mise.toml  pyproject.toml  requirements.txt
src/: config.py  main.py
src/api/: auth.py  client.py  gaso_client.py
src/services/: adapters.py  query_service.py
src/utils/: formatters.py  messages.py
test/: buscar_nombre.py  debug_gaso_simple.py  debug_nombre.py  debug_simple.py  inspect_direccion.py  probe_medidas.py  test_campos.py  test_gaso_debug.py
tests/: conftest.py  debug_gaso_simple.py  debug_inspect.py  debug_nombre.py  debug_simple.py  probe_columns.py  test_buscar_nombre.py  test_dni_validation.py  test_fallback.py  test_fnb.py  test_gaso.py  test_messages.py  test_segmento.py
vcc_totem/: api_wrapper.py  config.py  main.py  models.py
vcc_totem/api/: client.py
vcc_totem/clients/: auth.py  fnb.py  gaso.py  gaso_client.py  session.py
vcc_totem/core/: messages.py  query.py
vcc_totem/services/: __init__.py  adapters.py  message_generator.py  query_service.py
vcc_totem/utils/: messages.py
