[project]
name = "vcc-totem"
version = "0.0.1"
description = ""
readme = "readme.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.124.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "types-requests>=2.32.0",
]
